# agentcore-stateful-mcp-meeting-scheduler

./: .gitignore  README.md  local_runtime_test.py  remote_runtime_test.py
.github/workflows/: ci.yml
agentcore/: agentcore.json  aws-targets.example.json
agentcore/cdk/: package-lock.json  package.json
app/StatefulMeetingDemo/: README.md  main.py  pyproject.toml
