[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stateful-meeting-demo"
version = "0.1.0"
description = "Stateful MCP meeting scheduler for Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.4",
    "pydantic>=2.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
